# LogicSimulator

./: CMakeLists.txt  main.cpp
Logic/: LogicControl.cpp  LogicControl.h
Logic/LogicComponents/: AndComponent.cpp  AndComponent.h  LogicComponent.cpp  LogicComponent.h  LogicControl.cpp  LogicControl.h  LogicPoint.cpp  LogicPoint.h  OrComponent.cpp  OrComponent.h  wire.cpp  wire.h
